...
@OptIn(ExperimentalMaterial3Api::class)
@Preview
@Composable
private fun SurferToolbarWithButtonActionPreview() {
    SurferComponentPreview {
        SurferToolbar(
            title = "New transaction",
            onBack = {},
            actions = {
                SurferToolbarButtonAction(
                    icon = SurferIcons.Check,
                    text = "Save",
                    onClick = {},
...
